--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BABY LAMBO INU TEST</title>
+  <title>AMINA FOR MCA CHEMAGEL WARD</title>
   <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.7.1/dist/umd/index.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
   <script src = "https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
