--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AMINA FOR MCA CHEMAGEL WARD</title>
+  <title>AMINA KIDIYE FOR MCA CHEMAGEL</title>
   <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.7.1/dist/umd/index.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
   <script src = "https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
@@ -61,7 +61,8 @@
   <div class="cursor w3-hide-small"></div>
   <div class="cursor2 w3-hide-small"></div>
   <div  class="w3-container we-content" style="height: 100vh;">
-	<div class="w3-image w3-hide-small w3-quarter" style="width: 180px; height: auto;"> 
+	<div class="w3-image w3-hide-small w3-quarter" style="width: 250px; height: auto;" data-aos="fade-down"
+	data-aos-duration="1500" data-aos-delay="2000"> 
 		<img src="img/pngegg.png" class="w3-image" alt="logo">
 	
 	</div>
@@ -70,8 +71,10 @@
 		<img src="img/pngegg.png" class="w3-image" alt="logo">
 		
 	</div>
-	<div class="w3-threequarters w3-hide-small w3-center">
-		<h1 style="font-family: 'Allerta Stencil', sans-serif; font-size: 140px;" >AMINA <span>  KIDIYE   </span><br> <h3 style="margin-left: 200px;">Kamenyoon</h3></h1>
+	<div class="w3-threequarters w3-hide-small w3-center" data-aos="zoom-out"
+	data-aos-duration="1500" ">
+		<h1 style="font-family: 'Allerta Stencil', sans-serif; font-size: 140px;" >AMINA <span>  KIDIYE   </span><br> <h3 style="margin-left: 200px; font-size: 30px; font-style: italic;" data-aos="fade-up"
+      data-aos-duration="1500" data-aos-delay="2000">"Kamenyoon"</h3></h1>
 	</div>
 	<div class="w3-container w3-hide-medium w3-center  w3-hide-large">
 		<h1 style="font-family: 'Allerta Stencil', sans-serif; font-size: 122px;" data-aos="fade-right"
@@ -86,15 +89,17 @@
 
 	
 
-		<div class="w3-half w3-center" >
-			<h1 ><strong style="font-size: 160px;"  >MCA</strong> <br> <h3  style="font-size: 100px;">CHEMAGEL WARD <br> SOTIK</h3><strong style="font-size: 100px;" class="" >2022</strong></h1>
+		<div class="w3-half w3-center" data-aos="fade-right"
+    data-aos-duration="1500" data-aos-delay="500" >
+			<h1 ><strong style="font-size: 130px; font-family: 'Manrope', sans-serif; font-weight:200;"  >MCA</strong> <br> <h3  style="font-size: 90px; font-family: 'Manrope', sans-serif; font-weight:200;">CHEMAGEL WARD <br> SOTIK</h3><strong style="font-size: 100px; font-family: 'Manrope', sans-serif; font-weight:200;" class="" >2022</strong></h1>
 
 		</div>
-		<div class="w3-half" >
-			<img src="img/mamamina.jpg" alt="amina">
+		<div class="w3-half" data-aos="fade-left"
+    data-aos-duration="1500" data-aos-delay="500" >
+			<img src="img/mamamina.jpg" style="border-radius: 20px;" alt="amina">
 		</div>
 	</div>
-	<div class="w3-container w3-hide-medium w3-hide-large" style="margin-top: 50px; max-height: 100%; background-image: url(img/mamamina.jpg); background-color:rgba(0, 0, 0, 0.329); background-blend-mode: soft-light; background-repeat: no-repeat; border-radius: 15px;   border: 1px solid;
+	<div class="w3-container w3-hide-medium w3-hide-large" style="margin-top: 50px;  background-image: url(img/mamamina.jpg); background-color:rgba(0, 0, 0, 0.329); background-blend-mode: soft-light; background-repeat: no-repeat; border-radius: 15px;   border: 1px solid;
 	padding: 10px;
 	box-shadow:  18px 18px 15px rgb(3, 31, 5);" data-aos="zoom-out"
 	data-aos-duration="1000" data-aos-delay="2500"  >
@@ -102,20 +107,18 @@
 	
 
 		
-		<div class="w3-half w3-image w3-left" >
+		<div class=" w3-left" >
 			
 			<h1 style="font-family: 'Manrope', sans-serif; font-weight:600;" ><strong style="font-size: 80px; background-color: rgba(0, 0, 0, 0.198);
-				backdrop-filter: blur(5px); border-radius: 15px; padding: 5px; color: white; font-family: 'Manrope', sans-serif; font-weight:700; font-family: 'Manrope', sans-serif; font-weight:200; "  data-aos="fade-up"
-	data-aos-duration="1000" data-aos-delay="3000"  >MCA</strong> <br> <br><br><h3  style="font-size: 50px; background-color: rgba(0, 0, 0, 0.198);
-				backdrop-filter: blur(5px); border-radius: 15px; padding: 5px; max-width: 55vw; color: rgb(227, 240, 108); font-family: 'Manrope', sans-serif; font-weight:200; " data-aos="fade-up"
+				backdrop-filter: blur(5px);  background-attachment: cover;  background-size: 100% 100%; top: 0; border-radius: 15px; padding: 5px; color: white; font-family: 'Manrope', sans-serif; font-weight:700; font-family: 'Manrope', sans-serif; font-weight:200; "  data-aos="fade-up"
+	data-aos-duration="1000" data-aos-delay="3000"  >MCA</strong> <br><br> <br><br><h3  style="font-size: 50px; background-color: rgba(0, 0, 0, 0.198);
+				backdrop-filter: blur(5px); border-radius: 15px; padding: 5px; max-width: 400px; color: rgb(227, 240, 108); font-family: 'Manrope', sans-serif; font-weight:200; " data-aos="fade-up"
 	data-aos-duration="1000" data-aos-delay="3500"  >CHEMAGEL WARD <br> SOTIK</h3><br><br><br><strong style="font-size: 50px; background-color: rgba(0, 0, 0, 0.198);
 				backdrop-filter: blur(5px); border-radius: 15px; padding: 5px; color: azure; font-family: 'Manrope', sans-serif; font-weight:200; "    >2022</strong><br><br><br><br></h1>
 
 		</div>
 	</div>
-	<div class="w3-container" style="height: 600px;">
-
-	</div>
+	
   </div>  
   
 
