--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
 			
 			<h1 style="font-family: 'Manrope', sans-serif; font-weight:600;" ><strong style="font-size: 80px; background-color: rgba(0, 0, 0, 0.198);
 				backdrop-filter: blur(5px);  background-attachment: cover;  background-size: 100% 100%; top: 0; border-radius: 15px; padding: 5px; color: white; font-family: 'Manrope', sans-serif; font-weight:700; font-family: 'Manrope', sans-serif; font-weight:200; "  data-aos="fade-up"
-	data-aos-duration="1000" data-aos-delay="3000"  >MCA</strong> <br><br> <br><br><h3  style="font-size: 50px; background-color: rgba(0, 0, 0, 0.198);
-				backdrop-filter: blur(5px); border-radius: 15px; padding: 5px; max-width: 400px; color: rgb(227, 240, 108); font-family: 'Manrope', sans-serif; font-weight:200; " data-aos="fade-up"
+	data-aos-duration="1000" data-aos-delay="3000"  >MCA</strong> <br><br> <br><br><h3  style="font-size: 50px; border-radius: 15px; padding: 5px;   color: rgb(227, 240, 108); font-family: 'Manrope', sans-serif; font-weight:200; " data-aos="fade-up"
 	data-aos-duration="1000" data-aos-delay="3500"  >CHEMAGEL WARD <br> SOTIK</h3><br><br><br><strong style="font-size: 50px; background-color: rgba(0, 0, 0, 0.198);
 				backdrop-filter: blur(5px); border-radius: 15px; padding: 5px; color: azure; font-family: 'Manrope', sans-serif; font-weight:200; "    >2022</strong><br><br><br><br></h1>
 
